--- a/app/components/hamburgerMenu.css
+++ b/app/components/hamburgerMenu.css
@@ -1,44 +1,41 @@
 .menu-container {
-    position: relative;
+  position: relative;
 }
 
 .menu {
-    position: absolute;
-    left: 50%;
-    top: 3rem;
-    transform: translate(-50%, 0);
-    background-color: #181818;
-    color: #F5F5F5;
-    display: none;
+  position: absolute;
+  left: 50%;
+  top: 3rem;
+  transform: translate(-50%, 0);
+  background-color: #181818;
+  color: #f5f5f5;
+  display: none;
 }
 
 .menu.open {
-    display: block;
+  display: block;
 }
 
 .menu ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .menu li {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .menu li a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 1;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
 }
-
-
-/* Add any additional styling as needed */
